--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,7 +3,8 @@
     <div class="col border">
       <p>Welcome Message</p>
       <div class="col">
-        <img src="" alt="" />
+        <img src="../img/101.jpg" alt="" />
+        <img src="../img/102.jpg" alt="" />
       </div>
     </div>
     <div class="col border">
