--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light mb-3">
   <div class="container">
     <a class="navbar-brand">
-      <img src="../img/logo.png" alt="" class="d-inline-block align-text-top" />
+      <img src="../../assets/img/logo.png" alt="" width="36" height="30" class="d-inline-block align-text-top" />
       LPIC 1 LCE App</a
     >
     <button
