--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,14 +1,20 @@
-<div class="container border">
+<div class="container border mb-3">
   <div class="row">
     <div class="col border">
       <p>Welcome Message</p>
-      <div class="col">
-        <img src="../img/101.jpg" alt="" />
-        <img src="../img/102.jpg" alt="" />
+      <div class="col mb-3">
+        <img  class="img-fluid rounded mx-auto d-block mb-3 border border-warning border-2" src="../../assets/img/101.jpg" alt="" />
+        <img  class="img-fluid rounded mx-auto d-block mb-3 border border-success border-2" src="../../assets/img/102.jpg" alt="" />
       </div>
     </div>
     <div class="col border">
       <p>Beschreibung</p>
+
+      <p>Learn Modus</p>
+
+      <p>Check Modus/p>
+
+      <p>Exam Modus</p>
     </div>
   </div>
 </div>
